# assist-bot

./: README.md  pyproject.toml
assist_bot/: bot.py
assist_bot/resources/: alerts.json
